episode response struct
