# docs/swagger.yaml
@@ -382,6 +382,10 @@ definitions:
       id:
         description: ID of the ent.
         type: string
+      navPicture:
+        type: string
+      profile:
+        $ref: '#/definitions/ent.Profile'
       sid:
         description: Sid holds the value of the "sid" field.
         type: string
